--- a/home.html
+++ b/home.html
@@ -4,9 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Jhareign Solidum</title>
+
+    <link rel="stylesheet" href="/src/css/home.css">
 </head>
 <body>
     <canvas id="canvas"></canvas>
+
+    <main>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+    </main>
 
     <script type="module" src="/src/js/three.js"></script>
     <script type="module" src="/src/js/home.js"></script>
