scrolling + other things

--- a/home.html
+++ b/home.html
@@ -8,43 +8,9 @@
     <link rel="stylesheet" href="/src/css/home.css">
 </head>
 <body>
-    <canvas id="canvas"></canvas>
+    <canvas></canvas>
 
     <main>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
     </main>
 
