dom content baby

--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,16 @@
     <title>Home - Jhareign Solidum</title>
 
     <link rel="stylesheet" href="/src/css/home.css">
+    <link rel="stylesheet" href="/src/css/home_responsive.css">
 </head>
 <body>
     <canvas></canvas>
 
     <main>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        <section id="s1">
+            <h1>Hi! I am Jhareign Solidum,</h1>
+            <p>and this is my official website</p>
+        </section>
     </main>
 
     <script type="module" src="/src/js/home.js"></script>
