some more content!

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,29 @@
             <h1>Hi! I am Jhareign Solidum,</h1>
             <p>and this is my official website</p>
         </section>
+
+        <section id="s2">
+            <h1>Who am I?</h1>
+            <hr>
+            <p>
+                I am a <span id="age">15</span> year old student from the Philippines. I am a hobbyist programmer
+                with a huge amount of fascination and curiosity to softwares and computers.
+            </p>
+        </section>
+
+        <section id="s3">
+            <p>
+                I also play the bass instrument for our church, and by default have a decent amount of knowledge
+                about music theory.
+            </p>
+        </section>
+
+        <section id="s4">
+            <p>
+                I also play chess for fun. I have a Chess.com elo rating of around 1600. I have played with
+                strong players over the board and won some tournaments.
+            </p>
+        </section>
     </main>
 
     <script type="module" src="/src/js/home.js"></script>
