--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 
         <section id="s3">
             <p>
-                I also play the bass instrument for our church, and by default have a decent amount of knowledge
+                I also play the bass guitar instrument for our church, and by default have a decent amount of knowledge
                 about music theory.
             </p>
         </section>
