--- a/public/index.html
+++ b/public/index.html
@@ -14,29 +14,72 @@
     <main>
         <section id="s1">
             <h1>Hi! I am Jhareign Solidum,</h1>
-            <p>and this is my official website</p>
+            <p>a software programmer</p>
         </section>
 
         <section id="s2">
             <h1>Who am I?</h1>
             <hr>
             <p>
-                I am a <span id="age">15</span> year old student from the Philippines. I am a hobbyist programmer
-                with a huge amount of fascination and curiosity to softwares and computers.
+                I am a <span id="age">15</span> year old student from the Philippines. 
+                I am a hobbyist programmer with a huge amount of fascination and curiosity 
+                to softwares and computers.
             </p>
         </section>
 
         <section id="s3">
             <p>
-                I also play the bass guitar instrument for our church, and by default have a decent amount of knowledge
-                about music theory.
+                I also play the bass guitar instrument for our church, and by default have 
+                a decent amount of knowledge about music theory.
             </p>
         </section>
 
         <section id="s4">
             <p>
-                I also play chess for fun. I have a Chess.com elo rating of around 1600. I have played with
-                strong players over the board and won some tournaments.
+                I also play chess for fun. I have a Chess.com elo rating of around 1600. 
+                I have played with strong players over the board and won some tournaments.
+            </p>
+        </section>
+
+        <section id="s5">
+            <p>
+                This is me, taken on: Feb 17, 2024 - 8:00 PM
+            </p>
+
+            <img
+                src="src/images/me.jpg"
+                alt="A picture of me"
+                title="A picture of me"
+            >
+        </section>
+
+        <section id="s6">
+            <h1>As a programmer</h1>
+            <hr>
+            <p>
+                I started my programming journey in 2020, where I got bored during
+                pandemic and started exploring "no-code" game engines. My curiosity
+                grew, and so as my mastery. It has been <span id="exp">4</span> years
+                since I started. As of now, I have coded in about 12 programming 
+                languages and created projects ranging from websites to games to operating systems.
+            </p>
+        </section>
+
+
+        <section id="s7">
+            <h1>Programming languages</h1>
+            <hr>
+
+            <p class="contrast">My main programming languages:</p>
+            <p>HTML, CSS, and Javascript.</p>
+            
+            <br>
+
+            <p class="contrast">Programming languages that I have coded before:</p>
+            <p>
+                HTML, CSS, Javascript, C,
+                C++, C#, Python, Java, Kotlin, Batch Script, Assembly Language, SQL, and
+                GDScript.
             </p>
         </section>
     </main>
