--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,6 @@
             </p>
         </section>
 
-
         <section id="s7">
             <h1>Programming languages</h1>
             <hr>
@@ -80,6 +79,34 @@
                 HTML, CSS, Javascript, C,
                 C++, C#, Python, Java, Kotlin, Batch Script, Assembly Language, SQL, and
                 GDScript.
+            </p>
+        </section>
+
+        <section id="s8">
+            <h1>School life</h1>
+            <hr>
+
+            <p>
+                There was one classmate I had in kindergarten whom I became good friends with.
+                He was very intelligent and at the top of the class. I was influenced by his
+                intelligence and his curiosity. Since then, I have been very interested about
+                learning more. As a result, my marks and grades significantly improved.
+            </p>
+            <br>
+            <p>
+                During elementary, I have consistently stayed at the top of my class and getting
+                general averages between 95% to 97%. This significantly improved during my 
+                high school, as I were getting general averages between 97.5% to 98.5%.
+            </p>
+        </section>
+
+        <section id="s9">
+            <h1>Achievements</h1>
+            <hr>
+
+            <p>
+                I have been constanly getting achievements throughout my school life, ranging from
+                school competitions to inter-school competitions.
             </p>
         </section>
     </main>
