--- a/public/index.html
+++ b/public/index.html
@@ -106,8 +106,22 @@
 
             <p>
                 I have been constanly getting achievements throughout my school life, ranging from
-                school competitions to inter-school competitions.
+                school competitions to inter-school competitions. The achievements are from different
+                facets of my life, ranging from chess to quiz bees.
             </p>
+        </section>
+
+        <section id="s10">
+            <h1>Projects</h1>
+            <hr>
+
+            <p>
+                Here are the projects that I have created.
+            </p>
+        </section>
+
+        <section id="s11">
+            
         </section>
     </main>
 
