projects bro, projects

--- a/public/index.html
+++ b/public/index.html
@@ -121,7 +121,123 @@
         </section>
 
         <section id="s11">
-            
+            <h1>Games</h1>
+            <hr>
+
+            <div class="cards">
+                <article class="card">
+                    <img src="/src/images/me.jpg">
+
+                    <div>
+                        <h2>Game</h2>
+                        <p>
+                            Description
+                        </p>
+                    </div>
+                </article>
+
+                <article class="card">
+                    <img src="/src/images/me.jpg">
+
+                    <div>
+                        <h2>Game</h2>
+                        <p>
+                            Description
+                        </p>
+                    </div>
+                </article>
+
+                <article class="card">
+                    <img src="/src/images/me.jpg">
+
+                    <div>
+                        <h2>Game</h2>
+                        <p>
+                            Description
+                        </p>
+                    </div>
+                </article>
+            </div>
+        </section>
+
+        <section id="s12">
+            <h1>Websites</h1>
+            <hr>
+
+            <div class="cards">
+                <article class="card">
+                    <img src="/src/images/me.jpg">
+
+                    <div>
+                        <h2>Game</h2>
+                        <p>
+                            Description
+                        </p>
+                    </div>
+                </article>
+
+                <article class="card">
+                    <img src="/src/images/me.jpg">
+
+                    <div>
+                        <h2>Game</h2>
+                        <p>
+                            Description
+                        </p>
+                    </div>
+                </article>
+
+                <article class="card">
+                    <img src="/src/images/me.jpg">
+
+                    <div>
+                        <h2>Game</h2>
+                        <p>
+                            Description
+                        </p>
+                    </div>
+                </article>
+            </div>
+        </section>
+
+        <section id="s13">
+            <h1>Other projects</h1>
+            <hr>
+
+            <div class="cards">
+                <article class="card">
+                    <img src="/src/images/me.jpg">
+
+                    <div>
+                        <h2>Game</h2>
+                        <p>
+                            Description
+                        </p>
+                    </div>
+                </article>
+
+                <article class="card">
+                    <img src="/src/images/me.jpg">
+
+                    <div>
+                        <h2>Game</h2>
+                        <p>
+                            Description
+                        </p>
+                    </div>
+                </article>
+
+                <article class="card">
+                    <img src="/src/images/me.jpg">
+
+                    <div>
+                        <h2>Game</h2>
+                        <p>
+                            Description
+                        </p>
+                    </div>
+                </article>
+            </div>
         </section>
     </main>
 
