--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,10 @@
     <canvas></canvas>
 
     <main>
-        <section id="s1">
+        <header id="s1">
             <h1>Hi! I am Jhareign Solidum,</h1>
             <p>a software programmer</p>
-        </section>
+        </header>
 
         <section id="s2">
             <h1>Who am I?</h1>
@@ -239,6 +239,12 @@
                 </article>
             </div>
         </section>
+
+        <footer id="s14">
+            <h1>Contacts</h1>
+            <hr>
+            <p>Email: jhareignsolidum@gmail.com</p>
+        </footer>
     </main>
 
     <script type="module" src="/src/js/home.js"></script>
