more optimizations especially to projects

--- a/public/index.html
+++ b/public/index.html
@@ -87,16 +87,9 @@
             <hr>
 
             <p>
-                There was one classmate I had in kindergarten whom I became good friends with.
-                He was very intelligent and at the top of the class. I was influenced by his
-                intelligence and his curiosity. Since then, I have been very interested about
-                learning more. As a result, my marks and grades significantly improved.
-            </p>
-            <br>
-            <p>
-                During elementary, I have consistently stayed at the top of my class and getting
-                general averages between 95% to 97%. This significantly improved during my 
-                high school, as I were getting general averages between 97.5% to 98.5%.
+                As of 2024, I am a Grade 9 student of the University of Mindanao Ilang High School.
+                I have continually excelled my studies throughout my academic life, fuelled by my
+                curiousity, mastery, and passion.
             </p>
         </section>
 
@@ -120,124 +113,25 @@
             </p>
         </section>
 
-        <section id="s11 games">
+        <section id="s11">
             <h1>Games</h1>
             <hr>
 
-            <div class="cards">
-                <article class="card">
-                    <img src="/src/images/me.jpg">
-
-                    <div>
-                        <h2>Game</h2>
-                        <p>
-                            Description
-                        </p>
-                    </div>
-                </article>
-
-                <article class="card">
-                    <img src="/src/images/me.jpg">
-
-                    <div>
-                        <h2>Game</h2>
-                        <p>
-                            Description
-                        </p>
-                    </div>
-                </article>
-
-                <article class="card">
-                    <img src="/src/images/me.jpg">
-
-                    <div>
-                        <h2>Game</h2>
-                        <p>
-                            Description
-                        </p>
-                    </div>
-                </article>
-            </div>
+            <div class="cards" data-type="games"></div>
         </section>
 
-        <section id="s12 wesbites">
+        <section id="s12">
             <h1>Websites</h1>
             <hr>
 
-            <div class="cards">
-                <article class="card">
-                    <img src="/src/images/me.jpg">
-
-                    <div>
-                        <h2>Game</h2>
-                        <p>
-                            Description
-                        </p>
-                    </div>
-                </article>
-
-                <article class="card">
-                    <img src="/src/images/me.jpg">
-
-                    <div>
-                        <h2>Game</h2>
-                        <p>
-                            Description
-                        </p>
-                    </div>
-                </article>
-
-                <article class="card">
-                    <img src="/src/images/me.jpg">
-
-                    <div>
-                        <h2>Game</h2>
-                        <p>
-                            Description
-                        </p>
-                    </div>
-                </article>
-            </div>
+            <div class="cards" data-type="websites"></div>
         </section>
 
-        <section id="s13 other-projects">
+        <section id="s13">
             <h1>Other projects</h1>
             <hr>
 
-            <div class="cards">
-                <article class="card">
-                    <img src="/src/images/me.jpg">
-
-                    <div>
-                        <h2>Game</h2>
-                        <p>
-                            Description
-                        </p>
-                    </div>
-                </article>
-
-                <article class="card">
-                    <img src="/src/images/me.jpg">
-
-                    <div>
-                        <h2>Game</h2>
-                        <p>
-                            Description
-                        </p>
-                    </div>
-                </article>
-
-                <article class="card">
-                    <img src="/src/images/me.jpg">
-
-                    <div>
-                        <h2>Game</h2>
-                        <p>
-                            Description
-                        </p>
-                    </div>
-                </article>
-            </div>
+            <div class="cards" data-type="other-projects"></div>
         </section>
 
         <footer id="s14">
