significant projects optimization + os page improvement

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Jhareign Solidum</title>
 
-    <link rel="stylesheet" href="/src/css/home.css">
-    <link rel="stylesheet" href="/src/css/home_responsive.css">
+    <link rel="stylesheet" href="/src/css/style.css">
+    <link rel="stylesheet" href="/src/css/style_responsive.css">
 </head>
 <body>
     <canvas></canvas>
