--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,21 @@
 <body>
     <canvas></canvas>
 
+    <nav>
+        <a>
+            <img src="/src/icons/home.webp">
+            <p>Home</p>
+        </a>
+        <a>
+            <img src="/src/icons/projects.webp">
+            <p>Projects</p>
+        </a>
+        <a>
+            <img src="/src/icons/contacts.webp">
+            <p>Contacts</p>
+        </a>
+    </nav>
+
     <main>
         <header id="s1">
             <h1>Hi! I am Jhareign Solidum,</h1>
@@ -28,20 +43,20 @@
         </section>
 
         <section id="s3">
+            <h1>Hobbies</h1>
+            <hr>
             <p>
                 I also play the bass guitar instrument for our church, and by default have 
                 a decent amount of knowledge about music theory.
             </p>
-        </section>
-
-        <section id="s4">
+            <br>
             <p>
                 I also play chess for fun. I have a Chess.com elo rating of around 1600. 
                 I have played with strong players over the board and won some tournaments.
             </p>
         </section>
 
-        <section id="s5">
+        <section id="s4">
             <p>
                 This is me, taken on: Feb 17, 2024 - 8:00 PM
             </p>
@@ -53,7 +68,7 @@
             >
         </section>
 
-        <section id="s6">
+        <section id="s5">
             <h1>As a programmer</h1>
             <hr>
             <p>
@@ -65,7 +80,7 @@
             </p>
         </section>
 
-        <section id="s7">
+        <section id="s6">
             <h1>Programming languages</h1>
             <hr>
 
@@ -82,7 +97,7 @@
             </p>
         </section>
 
-        <section id="s8">
+        <section id="s7">
             <h1>School life</h1>
             <hr>
 
@@ -93,7 +108,7 @@
             </p>
         </section>
 
-        <section id="s9">
+        <section id="s8">
             <h1>Achievements</h1>
             <hr>
 
@@ -104,7 +119,7 @@
             </p>
         </section>
 
-        <section id="s10">
+        <section id="s9">
             <h1>Projects</h1>
             <hr>
 
@@ -113,28 +128,28 @@
             </p>
         </section>
 
-        <section id="s11">
+        <section id="s10">
             <h1>Games</h1>
             <hr>
 
             <div class="cards" data-type="games"></div>
         </section>
 
-        <section id="s12">
+        <section id="s11">
             <h1>Websites</h1>
             <hr>
 
             <div class="cards" data-type="websites"></div>
         </section>
 
-        <section id="s13">
+        <section id="s12">
             <h1>Other projects</h1>
             <hr>
 
             <div class="cards" data-type="other-projects"></div>
         </section>
 
-        <footer id="s14">
+        <footer id="s13">
             <h1>Contacts</h1>
             <hr>
             <p>Email: jhareignsolidum@gmail.com</p>
