optimizations and improvements

--- a/public/index.html
+++ b/public/index.html
@@ -12,22 +12,22 @@
     <canvas></canvas>
 
     <nav>
-        <a>
+        <a href="#home">
             <img src="/src/icons/home.webp">
             <p>Home</p>
         </a>
-        <a>
+        <a href="#projects">
             <img src="/src/icons/projects.webp">
             <p>Projects</p>
         </a>
-        <a>
+        <a href="#contacts">
             <img src="/src/icons/contacts.webp">
             <p>Contacts</p>
         </a>
     </nav>
 
     <main>
-        <header id="s1">
+        <header id="s1" data-type="home">
             <h1>Hi! I am Jhareign Solidum,</h1>
             <p>a software programmer</p>
         </header>
@@ -119,7 +119,7 @@
             </p>
         </section>
 
-        <section id="s9">
+        <section id="s9" data-type="projects">
             <h1>Projects</h1>
             <hr>
 
@@ -149,7 +149,7 @@
             <div class="cards" data-type="other-projects"></div>
         </section>
 
-        <footer id="s13">
+        <footer id="s13" data-type="contacts">
             <h1>Contacts</h1>
             <hr>
             <p>Email: jhareignsolidum@gmail.com</p>
