--- a/public/index.html
+++ b/public/index.html
@@ -83,18 +83,16 @@
         <section id="s6">
             <h1>Programming languages</h1>
             <hr>
+            <p>My programming languages' progress to full, total mastery</p>
+            <br>
 
             <p class="contrast">My main programming languages:</p>
-            <p>HTML, CSS, and Javascript.</p>
-            
+            <div class="barlist" data-type="main"></div>
+
             <br>
 
             <p class="contrast">Programming languages that I have coded before:</p>
-            <p>
-                HTML, CSS, Javascript, C,
-                C++, C#, Python, Java, Kotlin, Batch Script, Assembly Language, SQL, and
-                GDScript.
-            </p>
+            <div class="barlist" data-type="experience"></div>
         </section>
 
         <section id="s7">
@@ -157,6 +155,6 @@
     </main>
 
     <script type="module" src="/src/js/home.js"></script>
-    <script type="module" src="/src/js/projects.js"></script>
+    <script type="module" src="/src/js/load.js"></script>
 </body>
 </html>
