programming nav link added

--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,13 @@
             <img src="/src/icons/home.webp">
             <p>Home</p>
         </a>
+        <a href="#programming">
+            <img src="/src/icons/programming.webp">
+            <p>Projects</p>
+        </a>
         <a href="#projects">
             <img src="/src/icons/projects.webp">
-            <p>Projects</p>
+            <p>Programming</p>
         </a>
         <a href="#contacts">
             <img src="/src/icons/contacts.webp">
@@ -75,12 +79,12 @@
                 I started my programming journey in 2020, where I got bored during
                 pandemic and started exploring "no-code" game engines. My curiosity
                 grew, and so as my mastery. It has been <span id="exp">4</span> years
-                since I started. As of now, I have coded in about 12 programming 
+                since I started. As of now, I have coded in about 13 programming 
                 languages and created projects ranging from websites to games to operating systems.
             </p>
         </section>
 
-        <section id="s6">
+        <section id="s6" data-type="programming">
             <h1>Programming languages</h1>
             <hr>
             <p>My programming languages' progress to full, total mastery</p>
