--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
             <h1>Hobbies</h1>
             <hr>
             <p>
-                I also play the bass guitar instrument for our church, and by default have 
+                I also play the bass guitar instrument and by default have 
                 a decent amount of knowledge about music theory.
             </p>
             <br>
@@ -152,9 +152,9 @@
         </section>
 
         <footer id="s13" data-type="contacts">
-            <h1>Contacts</h1>
+            <h1>Contact Us</h1>
             <hr>
-            <p>Email: jhareignsolidum@gmail.com</p>
+            <p>Email: <a href="mailto:jhareignsolidum@gmail.com">jhareignsolidum@gmail.com</a></p>
         </footer>
     </main>
 
