--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="/src/css/style.css">
     <link rel="stylesheet" href="/src/css/style_responsive.css">
+    <link rel="icon" type="image/x-icon" href="/src/icons/favicon.ico">
 </head>
 <body>
     <canvas></canvas>
