--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="/src/css/style.css">
     <link rel="stylesheet" href="/src/css/style_responsive.css">
     <link rel="icon" type="image/x-icon" href="/src/icons/favicon.ico">
+
+    <meta name="google-site-verification" content="L2_jVKk64XqvDOgOD3OxSIWGi2PLqIl7eLZ6z4djkf4" />
 </head>
 <body>
     <canvas></canvas>
