basic loading screen

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,10 @@
     <meta name="google-site-verification" content="L2_jVKk64XqvDOgOD3OxSIWGi2PLqIl7eLZ6z4djkf4" />
 </head>
 <body>
+    <section data-main-name="command-line">
+        <p>C:\Jhareign>webapp run</p>
+    </section>
+
     <canvas></canvas>
 
     <nav>
@@ -33,7 +37,7 @@
         </a>
     </nav>
 
-    <main>
+    <main data-main-name="main">
         <header id="s1" data-type="home">
             <h1>Hi! I am Jhareign Solidum,</h1>
             <p>a software programmer</p>
