--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
 <body>
     <section data-main-name="command-line">
         <p>C:\Jhareign>webapp run</p>
+        <p>Initializing...</p>
     </section>
 
     <canvas></canvas>
