--- a/public/index.html
+++ b/public/index.html
@@ -159,10 +159,49 @@
             <div class="cards" data-type="other-projects"></div>
         </section>
 
-        <footer id="s13" data-type="contacts">
+        <section id="s13" data-type="contacts">
             <h1>Contact Us</h1>
             <hr>
             <p>Email: <a href="mailto:jhareignsolidum@gmail.com">jhareignsolidum@gmail.com</a></p>
+        </section>
+
+        <footer id="s14">
+            <h1>History of this website</h1>
+            <hr>
+            <p>
+                This is the 3rd iteration of my personal website. Work started in 2022,
+                where I created the first iteration. The main focus of it was just to have
+                a website up. Here is some of the "remnants" of the first iteration:
+            </p>
+            <br>
+            <a 
+                href="https://web.archive.org/web/20220914091916/https://great-anaphylaxis.web.app/projects.html">
+                Old website/projects.html
+            </a>
+            <a 
+                href="https://web.archive.org/web/20220914092016/https://great-anaphylaxis.web.app/history.html">
+                Old website/history.html
+            </a>
+            <br>
+
+            <p>
+                I started the second iteration of the website around February 2023. This time,
+                it was significantly better than the first. Here it is:
+            </p>
+            
+            <br>
+            <a 
+                href="https://great-anaphylaxis.web.app/">
+                https://great-anaphylaxis.web.app/
+            </a>
+            <br>
+
+            <p>
+                Late April of 2024 when I started working on the third iteration, which is this.
+                I figured out that why settle for a "low quality website" when you can create a
+                new better one?
+            </p>
+
         </footer>
     </main>
 
