minor fixes and improvements

--- a/public/index.html
+++ b/public/index.html
@@ -26,11 +26,11 @@
         </a>
         <a href="#programming">
             <img src="/src/icons/programming.webp">
-            <p>Projects</p>
+            <p>Programming</p>
         </a>
         <a href="#projects">
             <img src="/src/icons/projects.webp">
-            <p>Programming</p>
+            <p>Projects</p>
         </a>
         <a href="#contacts">
             <img src="/src/icons/contacts.webp">
@@ -175,11 +175,14 @@
             </p>
             <br>
             <a 
-                href="https://web.archive.org/web/20220914091916/https://great-anaphylaxis.web.app/projects.html">
+                href="https://web.archive.org/web/20220914091916/https://great-anaphylaxis.web.app/projects.html"
+                target="_blank">
                 Old website/projects.html
             </a>
+
             <a 
-                href="https://web.archive.org/web/20220914092016/https://great-anaphylaxis.web.app/history.html">
+                href="https://web.archive.org/web/20220914092016/https://great-anaphylaxis.web.app/history.html"
+                target="_blank">
                 Old website/history.html
             </a>
             <br>
@@ -191,7 +194,8 @@
             
             <br>
             <a 
-                href="https://great-anaphylaxis.web.app/">
+                href="https://great-anaphylaxis.web.app/"
+                target="_blank">
                 https://great-anaphylaxis.web.app/
             </a>
             <br>
@@ -201,6 +205,10 @@
                 I figured out that why settle for a "low quality website" when you can create a
                 new better one?
             </p>
+            <br>
+            <a href="#home">
+                Back to top
+            </a>
 
         </footer>
     </main>
