added 'copyright' hehehe

--- a/public/index.html
+++ b/public/index.html
@@ -209,6 +209,11 @@
             <a href="#home">
                 Back to top
             </a>
+            <br>
+
+            <p class="end">
+                Copyright &copy; <span id="copyright">2024</span> Jhareign Solidum
+            </p>
 
         </footer>
     </main>
