--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description" 
+        content="Hi! I am Jhareign Solidum, a student and a hobbyist programmer.">
+
+    
+
     <title>Home - Jhareign Solidum</title>
 
     <link rel="stylesheet" href="/src/css/style.css">
@@ -21,19 +27,19 @@
 
     <nav>
         <a href="#home">
-            <img src="/src/icons/home.webp">
+            <img src="/src/icons/home.webp" alt="Home icon">
             <p>Home</p>
         </a>
         <a href="#programming">
-            <img src="/src/icons/programming.webp">
+            <img src="/src/icons/programming.webp" alt="Programming icon">
             <p>Programming</p>
         </a>
         <a href="#projects">
-            <img src="/src/icons/projects.webp">
+            <img src="/src/icons/projects.webp" alt="Projects icon">
             <p>Projects</p>
         </a>
         <a href="#contacts">
-            <img src="/src/icons/contacts.webp">
+            <img src="/src/icons/contacts.webp" alt="Contacts icon">
             <p>Contacts</p>
         </a>
     </nav>
@@ -75,8 +81,8 @@
 
             <img
                 src="src/images/me.webp"
-                alt="A picture of me"
-                title="A picture of me"
+                alt="a picture of Jhareign Solidum (me)"
+                title="A picture of Jhareign Solidum (me)"
             >
         </section>
 
