--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <meta name="description" 
+    <meta name="og:title" property="og:title" content="Home - Jhareign Solidum">
+    <meta name="description"
         content="Hi! I am Jhareign Solidum, a student and a hobbyist programmer.">
-
+    <meta name="og:description" property="og:description" 
+        content="Hi! I am Jhareign Solidum, a student and a hobbyist programmer.">
+    <meta name="robots" content="index, follow">
     
-
     <title>Home - Jhareign Solidum</title>
 
+    <link rel="canonical" href="https://jhareign.web.app/">
     <link rel="stylesheet" href="/src/css/style.css">
     <link rel="stylesheet" href="/src/css/style_responsive.css">
     <link rel="icon" type="image/x-icon" href="/src/icons/favicon.ico">
