--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,14 @@
             <img src="/src/icons/contacts.webp" alt="Contacts icon">
             <p>Contacts</p>
         </a>
+        <a href="#command-line" class="right">
+            <img src="/src/icons/command-line.webp" alt="Command line icon" data-type="cli">
+        </a>
+
+        <div>
+            <input>
+            <button>&#10004;</button>
+        </div>
     </nav>
 
     <main data-main-name="main">
