almost all of cli is complete! (commands remain)

--- a/public/index.html
+++ b/public/index.html
@@ -49,8 +49,9 @@
         </a>
 
         <div>
-            <input>
-            <button>&#10004;</button>
+            <input type="text" placeholder="Type command here...">
+            <button title="Send command" data-type="send">&#10004;</button>
+            <button title="Scroll to computer" data-type="scroll">&#128187;</button>
         </div>
     </nav>
 
