--- a/public/index.html
+++ b/public/index.html
@@ -28,23 +28,23 @@
     <canvas></canvas>
 
     <nav>
-        <a href="#home">
+        <a href="#home" title="Go back home">
             <img src="/src/icons/home.webp" alt="Home icon">
             <p>Home</p>
         </a>
-        <a href="#programming">
+        <a href="#programming" title="Go to programming languages">
             <img src="/src/icons/programming.webp" alt="Programming icon">
             <p>Programming</p>
         </a>
-        <a href="#projects">
+        <a href="#projects" title="Go to projects">
             <img src="/src/icons/projects.webp" alt="Projects icon">
             <p>Projects</p>
         </a>
-        <a href="#contacts">
+        <a href="#contacts" title="Go to contacts">
             <img src="/src/icons/contacts.webp" alt="Contacts icon">
             <p>Contacts</p>
         </a>
-        <a href="#command-line" class="right">
+        <a href="#command-line" title="Open command line" class="right">
             <img src="/src/icons/command-line.webp" alt="Command line icon" data-type="cli">
         </a>
 
